kubernetes/data-lakehouse/base/management/dbgate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbgate
spec:
  selector:
    app: dbgate
  ports:
    - name: http
      port: 8080
      targetPort: 8080
