kubernetes/data-lakehouse/base/management/dbgate/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dbgate
  namespace: dbgate
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dbgate.theblacklodge.dev`)
      kind: Rule
      services:
        - name: dbgate
          port: 3000
